tests/compile_fail/edge_mismatch.cpp
static_assert(false, "Pipeline edge mismatch");
